add store url and files name in properties. Close #4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.h2.console.enabled=true
 
 person.reader.file.path=src/main/resources/
+person.reader.file.name=info.txt
+
+api.agify.url=https://api.agify.io?name=
 
 spring.web.resources.add-mappings=true
