fix bug with name that are not in the list. Close #14

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ person.reader.file.name=info.txt
 
 api.agify.url=https://api.agify.io?name=
 
+person.age.default_value=1000
+
 spring.web.resources.add-mappings=true
