add value to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
-spring.h2.console.enabled=true
+# PORT
+server.port=8080
 
+# H2 DB
+spring.h2.console.enabled=true
+spring.datasource.hikari.driver-class-name=org.h2.Driver
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb
+spring.datasource.hikari.username=sa
+spring.datasource.hikari.password=
+
+# VARIABLES
 person.reader.file.path=src/main/resources/
 person.reader.file.name=info.txt
 
 api.agify.url=https://api.agify.io?name=
 
 person.age.default_value=1000
+person.age.not_found_value=0
+person.count.default_value=0
+person.count.start_value = 1
 
+# WEB RESOURCES
 spring.web.resources.add-mappings=true
