--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,7 @@ person.age.not_found_value=0
 person.count.default_value=0
 person.count.start_value = 1
 
+spring.data.web.pageable.default-page-size=5
+
 # WEB RESOURCES
 spring.web.resources.add-mappings=true
