rename variables in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ person.reader.file.name=info.txt
 
 api.agify.url=https://api.agify.io?name=
 
-person.age.default_value=1000
-person.age.not_found_value=0
-person.count.default_value=0
-person.count.start_value = 1
+person.age.default-value=1000
+person.age.not-found-value=0
+person.count.default-value=0
+person.count.start-value = 1
 
 spring.data.web.pageable.default-page-size=5
 
