--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,20 @@
-# H2 DB
+# DATABASE
 spring:
   datasource:
-    hikari:
-      username: sa
-      driver-class-name: org.h2.Driver
-      jdbc-url: jdbc:h2:mem:testdb
-      password:
+    url: jdbc:postgresql://localhost:5432/naumen
+    username: postgres
+    password: 1412
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: false
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
   data:
     web:
       pageable:
