--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,14 +7,11 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
-  flyway:
-    enabled: true
-    baseline-on-migrate: true
   data:
     web:
       pageable:
